# apriori-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: apriori.hpp  database.hpp
include/util/: combinations.hpp
src/: apriori.cpp  combinations.cpp
